--- a/Dryad-README.Rmd
+++ b/Dryad-README.Rmd
@@ -4,13 +4,22 @@ title: 'Data From: TERRA REF, An Open Reference Data Set From High Resolution Ge
 author: "David LeBauer, long list TBD"
 date: "2/10/2020"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
   word_document: default
 ---
 
 ```{r setup, include=FALSE}
+
 knitr::opts_chunk$set(echo = FALSE, cache = FALSE, message = FALSE)
+
+library(traits)
+library(dplyr)
+library(stringr)
+
+options(betydb_url = "https://terraref.ncsa.illinois.edu/bety/",
+        betydb_api_version = 'v1',
+        betydb_key = readLines('~/.betykey', warn = FALSE))
 ```
 
 
@@ -34,26 +43,56 @@ doc <- list(packageId = "dataset-1", system = "Dryad",
 ## Abstract
 
 ```{r abstract, results = 'asis'}
-abstract <- EML::set_TextType("./abstract.md")
+abstract <- EML::set_TextType("metadata/abstract.md")
 class(abstract) <- 'abstract'
 doc$dataset$abstract <- abstract
-writeLines(readLines('abstract.md'))
+writeLines(readLines('metadata/abstract.md'))
 ```
 
-## Coverage
+## Usage Notes
+
+1. Technical Documentation
+  * website: https://docs.terraref.org/
+  * source: github.com/terraef/documentation
+  * archive: David LeBauer, Craig Willis, Rachel Shekar, Max Burnette, Ting Li, Scott Rohde, et al. 2020. “Terraref/documentation: Season 6 Data Publication (2019)”. Zenodo. doi:10.5281/zenodo.597425
+2. Tutorials: Tutorials for accessing and understanding data
+  * website: https://terraref.org/tutorials
+  * source: github.com/terraref/tutorials
+  * archive: TBD
+  * YouTube: https://www.youtube.com/channel/UComeQAqYR5aZrXN_3K5iFGw
+
+## Contents
+
+### Plot level phenotype data 
+
+*files* 
+* season_4_traits.csv.zip 
+* season_6_traits.csv.zip
+
+*format* csv with the following fields:
+
+* plot 
+* lat
+* lon
+* scientificname
+* genotype
+* season
+* treatment
+* date
+* time
+* year
+* month
+* trait
+* method
+* mean
+* checked: has this record been checked? 0 = No, 1 = Yes, 
+* notes
+* author
+* method_type
+
+## Methods
 
 ```{r location}
-library(traits)
-library(dplyr)
-library(stringr)
-# library(kableExtra)
-# library(jsonlite)
-
-
-options(betydb_url = "https://terraref.ncsa.illinois.edu/bety/",
-        betydb_api_version = 'v1',
-        betydb_key = readLines('~/.betykey', warn = FALSE))
-
 mac_field <- betydb_query(table = 'sites', sitename = '~MAC Field Scanner Field')
 library(sf)
 
@@ -72,36 +111,32 @@ doc$dataset$coverage <- set_coverage(beginDate = "2017-04-13",
                                      eastBoundingCoordinate  = mac_bounds['xmax'],
                                      northBoundingCoordinate = mac_bounds['ymax'],
                                      southBoundingCoordinate = mac_bounds['ymin']
-                                     #include each plot here?
                                      )
                                      
                                      
 ```
 
-## Methods
 
 ### Experimental Design
 
 ```{r experimental-design, results = 'asis'}
 
-experiment_descriptions <- readLines('metadata/experiment_descriptions.txt')
-
-writeLines(gsub("##", "\n####", experiment_descriptions))
+writeLines(readLines('metadata/experiments.md'))
 ```
 
 ```{r methods-eml}
 doc$dataset$methods <- EML::set_methods(
-  sampling_file = 'metadata/experiments_descriptions.txt',
-  methods_file = 'metadata/methods.csv')
+  sampling_file = 'metadata/experiments.md',
+  methods_file = 'metadata/methods.md')
 ```
 
-### Cultivars
+### Accessions
 
-A list of cultivars and the experiments in which they are planted are listed in the file 'germplasm.csv'. Additional attributes are listed in the files 'season_4_germplasm.json' and 'season_6_germplasm.json'.  
+Here we use the terms 'germplasm', 'cultivars', and 'accessions' to refer to the distinct plant genotypes that are the key unit of experimental investigations in breeding trials.
 
 ```{r cultivars, eval=FALSE}
-readr::read_csv('metadata/germplasm.csv') %>% 
-  knitr::kable()
+
+writeLines(readLines('metadata/germplasm.md'))
 ```
 
 
@@ -146,15 +181,17 @@ trait_counts %>%
   knitr::kable()
 ```
 
-## Usage Notes
+### Varables and Methods
 
-1. Technical Documentation
-  * website: https://docs.terraref.org/
-  * source: github.com/terraef/documentation
-  * archive: David LeBauer, Craig Willis, Rachel Shekar, Max Burnette, Ting Li, Scott Rohde, et al. 2020. “Terraref/documentation: Season 6 Data Publication (2019)”. Zenodo. doi:10.5281/zenodo.597425
-2. Tutorials: Tutorials for accessing and understanding data
-  * website: https://terraref.org/tutorials
-  * source: github.com/terraref/tutorials
-  * archive: TBD
-  * YouTube: https://www.youtube.com/channel/UComeQAqYR5aZrXN_3K5iFGw
+Below we provide details about each variable and method.
+
+```{r}
+writeLines(readLines('metadata/variables.md'))
+```
+
+### Methods
+
+```{r}
+writeLines(readLines('metadata/methods.md'))
+```
 
